--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "naive-ui": "^2.34.4",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "vue-gtag": "^2.0.1"
   }
 }
