--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "naive-ui": "^2.34.4",
     "sass": "^1.63.6",
-    "vue-gtag": "^2.0.1"
+    "vue-gtag": "^2.0.1",
+    "vue-hotjar-next": "^1.4.0"
   }
 }
