--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "unplugin-vue-components": "^0.25.1"
   },
   "dependencies": {
+    "@nuxtjs/robots": "^3.0.0",
     "axios": "^1.4.0",
     "naive-ui": "^2.34.4",
     "sass": "^1.63.6",
